update inbox api