@@ -2,14 +2,23 @@ package com.aigreentick.services.report.repository;
 
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Repository;
 
+import java.math.BigInteger;
+import java.sql.Timestamp;
+import java.time.LocalDateTime;
 import java.util.*;
 
+/**
+ * ULTRA-OPTIMIZED: Single query with window function to get all data including counts
+ * Matches PHP behavior exactly with complete field mapping
+ */
 @Repository
 @Slf4j
+@RequiredArgsConstructor
 public class ConversationRepository {
 
     @PersistenceContext
@@ -17,100 +26,143 @@ public class ConversationRepository {
 
     private final JdbcTemplate jdbcTemplate;
 
-    public ConversationRepository(JdbcTemplate jdbcTemplate) {
-        this.jdbcTemplate = jdbcTemplate;
-    }
-
+    /**
+     * SINGLE OPTIMIZED QUERY: Get contacts with last_chat + counts in one execution
+     * Uses window function COUNT(*) OVER() for total count
+     * Matches PHP response structure exactly
+     */
     public ConversationResult fetchContactsOptimized(
             Integer userId,
             String search,
             String filter,
+            LocalDateTime fromDate,
+            LocalDateTime toDate,
             int offset,
             int limit
     ) {
         StringBuilder sql = new StringBuilder("""
-        SELECT
-            cc.id,
-            cc.user_id,
-            cc.name,
-            cc.mobile,
-            cc.country_id,
-            cc.email,
-            cc.status,
-            cc.time,
-            cc.created_at,
-            cc.updated_at,
-            cc.deleted_at,
-
-            c.id         AS chat_id,
-            c.text       AS chat_text,
-            c.type       AS chat_type,
-            c.method     AS chat_method,
-            c.status     AS chat_status,
-            c.created_at AS chat_created_at,
-
-            COALESCE(ut.unread_count, 0) AS unread_count,
-
-            COUNT(*) OVER() AS total_count
-
-        FROM chat_contacts cc
-
-        /* 🔥 last chat per contact using MAX(id) */
-        INNER JOIN (
-            SELECT contact_id, MAX(id) AS last_chat_id
-            FROM chats
-            WHERE user_id = ?
-            GROUP BY contact_id
-        ) lc ON lc.contact_id = cc.id
-
-        INNER JOIN chats c
-            ON c.id = lc.last_chat_id
-           AND c.user_id = ?
-
-        /* ✅ unread count per contact */
-        LEFT JOIN (
-            SELECT contact_id, COUNT(*) AS unread_count
-            FROM chats
-            WHERE user_id = ?
-              AND type = 'recieve'
-              AND status = '0'
-            GROUP BY contact_id
-        ) ut ON ut.contact_id = cc.id
-
-        WHERE cc.user_id = ?
-    """);
+            SELECT
+                cc.id,
+                cc.user_id,
+                cc.name,
+                cc.mobile,
+                cc.country_id,
+                cc.email,
+                cc.status,
+                cc.time,
+                cc.allowed_sms,
+                cc.allowed_broadcast,
+                cc.created_at,
+                cc.updated_at,
+                cc.deleted_at,
+                
+                -- Last chat details (complete)
+                c.id AS chat_id,
+                c.source AS chat_source,
+                c.user_id AS chat_user_id,
+                c.contact_id AS chat_contact_id,
+                c.send_from AS chat_send_from,
+                c.send_to AS chat_send_to,
+                c.send_from_id AS chat_send_from_id,
+                c.send_to_id AS chat_send_to_id,
+                c.text AS chat_text,
+                c.type AS chat_type,
+                c.method AS chat_method,
+                c.image_id AS chat_image_id,
+                c.time AS chat_time,
+                c.template_id AS chat_template_id,
+                c.status AS chat_status,
+                c.is_media AS chat_is_media,
+                c.contact AS chat_contact,
+                c.payload AS chat_payload,
+                c.response AS chat_response,
+                c.message_id AS chat_message_id,
+                c.created_at AS chat_created_at,
+                c.updated_at AS chat_updated_at,
+                c.deleted_at AS chat_deleted_at,
+                c.caption AS chat_caption,
+                c.reply_from AS chat_reply_from,
+                c.reply_message_id AS chat_reply_message_id,
+                c.chat_bot_session_id AS chat_bot_session_id,
+                
+                -- Metadata
+                last_msg.last_chat_time,
+                COALESCE(unread_tbl.unread_count, 0) AS unread_count,
+                
+                -- Total count using window function
+                COUNT(*) OVER() AS total_count
+                
+            FROM chat_contacts cc
+            
+            -- Get last chat time per contact
+            INNER JOIN (
+                SELECT contact_id, MAX(CAST(time AS UNSIGNED)) AS last_chat_time
+                FROM chats
+                WHERE user_id = ?
+                GROUP BY contact_id
+            ) last_msg ON last_msg.contact_id = cc.id
+            
+            -- Get the actual last chat message
+            INNER JOIN chats c ON c.contact_id = cc.id
+                AND CAST(c.time AS UNSIGNED) = last_msg.last_chat_time
+                AND c.user_id = ?
+            
+            -- Get unread count per contact
+            LEFT JOIN (
+                SELECT contact_id, COUNT(*) AS unread_count
+                FROM chats
+                WHERE user_id = ?
+                  AND LOWER(TRIM(type)) = 'recieve'
+                  AND TRIM(status) = '0'
+                GROUP BY contact_id
+            ) unread_tbl ON unread_tbl.contact_id = cc.id
+            
+            WHERE cc.user_id = ?
+              AND last_msg.last_chat_time IS NOT NULL
+        """);
 
         List<Object> params = new ArrayList<>();
-        params.add(userId); // subquery MAX(id)
+        params.add(userId); // last_msg subquery
         params.add(userId); // chats join
         params.add(userId); // unread subquery
         params.add(userId); // main where
 
-        /* 🔍 Search */
-        if (search != null && !search.isBlank()) {
-            sql.append(" AND (cc.name LIKE ? OR cc.mobile LIKE ?) ");
-            String searchPattern = "%" + search + "%";
+        // Search filter
+        if (search != null && !search.trim().isEmpty()) {
+            sql.append(" AND (cc.mobile LIKE ? OR cc.name LIKE ?) ");
+            String searchPattern = "%" + search.trim() + "%";
             params.add(searchPattern);
             params.add(searchPattern);
         }
 
-        /* 📌 Filters */
+        // Filter by unread
         if ("unread".equalsIgnoreCase(filter)) {
-            sql.append(" AND ut.unread_count > 0 ");
+            sql.append(" AND unread_tbl.unread_count IS NOT NULL ");
         }
 
+        // Filter by active (last 24 hours)
         if ("active".equalsIgnoreCase(filter)) {
-            sql.append(" AND c.created_at >= ? ");
-            params.add(java.sql.Timestamp.valueOf(
-                    java.time.LocalDateTime.now().minusHours(24)
-            ));
+            long activeSince = (System.currentTimeMillis() / 1000) - 86400;
+            sql.append(" AND last_msg.last_chat_time >= ? ");
+            params.add(activeSince);
         }
 
-        sql.append(" ORDER BY c.id DESC LIMIT ? OFFSET ? ");
+        // Date range filters (if provided)
+        if (fromDate != null) {
+            sql.append(" AND EXISTS (SELECT 1 FROM chats ch WHERE ch.contact_id = cc.id AND ch.created_at >= ?) ");
+            params.add(Timestamp.valueOf(fromDate));
+        }
+
+        if (toDate != null) {
+            sql.append(" AND EXISTS (SELECT 1 FROM chats ch WHERE ch.contact_id = cc.id AND ch.created_at <= ?) ");
+            params.add(Timestamp.valueOf(toDate));
+        }
+
+        sql.append(" ORDER BY last_msg.last_chat_time DESC LIMIT ? OFFSET ? ");
         params.add(limit);
         params.add(offset);
 
-        log.debug("Executing optimized ConversationRepository query");
+        log.debug("Executing optimized conversation query with {} parameters", params.size());
 
         List<Map<String, Object>> rows = jdbcTemplate.query(
                 sql.toString(),
@@ -127,154 +179,84 @@ public class ConversationRepository {
                     row.put("email", rs.getString("email"));
                     row.put("status", rs.getObject("status"));
                     row.put("time", rs.getObject("time"));
-                    row.put("created_at", rs.getTimestamp("created_at") != null
-                            ? rs.getTimestamp("created_at").toLocalDateTime().toString()
-                            : null);
-                    row.put("updated_at", rs.getTimestamp("updated_at") != null
-                            ? rs.getTimestamp("updated_at").toLocalDateTime().toString()
-                            : null);
-                    row.put("deleted_at", rs.getTimestamp("deleted_at") != null
-                            ? rs.getTimestamp("deleted_at").toLocalDateTime().toString()
-                            : null);
+                    row.put("allowed_sms", rs.getBoolean("allowed_sms") ? 1 : 0);
+                    row.put("allowed_broadcast", rs.getBoolean("allowed_broadcast") ? 1 : 0);
+                    row.put("created_at", formatTimestamp(rs.getTimestamp("created_at")));
+                    row.put("updated_at", formatTimestamp(rs.getTimestamp("updated_at")));
+                    row.put("deleted_at", formatTimestamp(rs.getTimestamp("deleted_at")));
 
-                    // Last chat (nested)
+                    // Last chat (complete nested object matching PHP)
                     Map<String, Object> lastChat = new LinkedHashMap<>();
                     lastChat.put("id", rs.getObject("chat_id"));
+                    lastChat.put("source", rs.getString("chat_source"));
+                    lastChat.put("user_id", rs.getObject("chat_user_id"));
+                    lastChat.put("contact_id", rs.getObject("chat_contact_id"));
+                    lastChat.put("send_from", rs.getString("chat_send_from"));
+                    lastChat.put("send_to", rs.getString("chat_send_to"));
+                    lastChat.put("send_from_id", rs.getString("chat_send_from_id"));
+                    lastChat.put("send_to_id", rs.getString("chat_send_to_id"));
                     lastChat.put("text", rs.getString("chat_text"));
                     lastChat.put("type", rs.getString("chat_type"));
                     lastChat.put("method", rs.getString("chat_method"));
+                    lastChat.put("image_id", rs.getString("chat_image_id"));
+                    lastChat.put("time", rs.getString("chat_time"));
+                    lastChat.put("template_id", rs.getObject("chat_template_id"));
                     lastChat.put("status", rs.getString("chat_status"));
-                    lastChat.put("created_at", rs.getTimestamp("chat_created_at") != null
-                            ? rs.getTimestamp("chat_created_at").toLocalDateTime().toString()
-                            : null);
+                    lastChat.put("is_media", rs.getString("chat_is_media"));
+                    lastChat.put("contact", rs.getString("chat_contact"));
+                    lastChat.put("payload", rs.getString("chat_payload"));
+                    lastChat.put("response", rs.getString("chat_response"));
+                    lastChat.put("message_id", rs.getString("chat_message_id"));
+                    lastChat.put("created_at", formatTimestamp(rs.getTimestamp("chat_created_at")));
+                    lastChat.put("updated_at", formatTimestamp(rs.getTimestamp("chat_updated_at")));
+                    lastChat.put("deleted_at", formatTimestamp(rs.getTimestamp("chat_deleted_at")));
+                    lastChat.put("caption", rs.getString("chat_caption"));
+                    lastChat.put("reply_from", rs.getString("chat_reply_from"));
+                    lastChat.put("reply_message_id", rs.getString("chat_reply_message_id"));
+                    lastChat.put("chat_bot_session_id", rs.getObject("chat_bot_session_id"));
 
                     row.put("last_chat", lastChat);
 
                     // Metadata
+                    Object lastChatTimeObj = rs.getObject("last_chat_time");
+                    if (lastChatTimeObj instanceof BigInteger) {
+                        row.put("last_chat_time", ((BigInteger) lastChatTimeObj).longValue());
+                    } else if (lastChatTimeObj instanceof Number) {
+                        row.put("last_chat_time", ((Number) lastChatTimeObj).longValue());
+                    } else {
+                        row.put("last_chat_time", lastChatTimeObj);
+                    }
+
                     row.put("unread_count", rs.getInt("unread_count"));
+                    row.put("total_msg_count", rs.getInt("unread_count")); // total_msg_count = unread_count (PHP behavior)
+
+                    // Total count from window function
                     row.put("total_count", rs.getLong("total_count"));
 
                     return row;
                 }
         );
 
+        // Extract total count from first row (all rows have same total_count)
         long totalCount = rows.isEmpty()
                 ? 0L
                 : ((Number) rows.get(0).get("total_count")).longValue();
 
+        // Remove total_count from individual records
+        rows.forEach(row -> row.remove("total_count"));
+
         return new ConversationResult(rows, totalCount);
     }
 
-
-    /* =========================
-       FALLBACK: Keep old methods for backward compatibility
-       But they should not be used anymore
-      ========================= */
-    @Deprecated
-    public List<Map<String, Object>> fetchContacts(
-            Integer userId,
-            String search,
-            String filter,
-            int offset,
-            int limit
-    ) {
-        // Use new optimized method and extract just the data
-        ConversationResult result = fetchContactsOptimized(userId, search, filter, offset, limit);
-        return result.getData();
-    }
-
-    @Deprecated
-    public long countContacts(Integer userId, String search, String filter) {
-        // This is no longer needed as we get count in the main query
-        // But keep for compatibility - just call optimized method with limit 1
-        ConversationResult result = fetchContactsOptimized(userId, search, filter, 0, 1);
-        return result.getTotalCount();
-    }
-
-    @Deprecated
-    public Map<Integer, Map<String, Object>> fetchLastChats(List<Integer> contactIds) {
-        // This is no longer needed as last chat is included in main query
-        // But keep for backward compatibility
-        if (contactIds.isEmpty()) return Map.of();
-
-        String sql = """
-            SELECT c1.id,
-                   c1.source,
-                   c1.user_id,
-                   c1.contact_id,
-                   c1.send_from,
-                   c1.send_to,
-                   c1.send_from_id,
-                   c1.send_to_id,
-                   c1.text,
-                   c1.type,
-                   c1.method,
-                   c1.image_id,
-                   c1.time,
-                   c1.template_id,
-                   c1.status,
-                   c1.is_media,
-                   c1.contact,
-                   c1.payload,
-                   c1.response,
-                   c1.message_id,
-                   c1.created_at,
-                   c1.updated_at,
-                   c1.deleted_at
-            FROM chats c1
-            JOIN (
-                SELECT contact_id, MAX(CAST(time AS UNSIGNED)) AS max_time
-                FROM chats
-                WHERE contact_id IN :ids
-                GROUP BY contact_id
-            ) c2
-              ON c1.contact_id = c2.contact_id
-             AND CAST(c1.time AS UNSIGNED) = c2.max_time
-        """;
-
-        return jdbcTemplate.query(
-                sql.replace(":ids", contactIds.stream()
-                        .map(String::valueOf)
-                        .collect(java.util.stream.Collectors.joining(","))),
-                rs -> {
-                    Map<Integer, Map<String, Object>> map = new HashMap<>();
-                    while (rs.next()) {
-                        Map<String, Object> chat = new LinkedHashMap<>();
-                        chat.put("id", rs.getObject(1));
-                        chat.put("source", rs.getString(2));
-                        chat.put("user_id", rs.getObject(3));
-                        chat.put("contact_id", rs.getObject(4));
-                        chat.put("send_from", rs.getString(5));
-                        chat.put("send_to", rs.getString(6));
-                        chat.put("send_from_id", rs.getString(7));
-                        chat.put("send_to_id", rs.getString(8));
-                        chat.put("text", rs.getString(9));
-                        chat.put("type", rs.getString(10));
-                        chat.put("method", rs.getString(11));
-                        chat.put("image_id", rs.getString(12));
-                        chat.put("time", rs.getString(13));
-                        chat.put("template_id", rs.getObject(14));
-                        chat.put("status", rs.getString(15));
-                        chat.put("is_media", rs.getString(16));
-                        chat.put("contact", rs.getString(17));
-                        chat.put("payload", rs.getString(18));
-                        chat.put("response", rs.getString(19));
-                        chat.put("message_id", rs.getString(20));
-                        chat.put("created_at", rs.getTimestamp(21) != null
-                                ? rs.getTimestamp(21).toLocalDateTime().toString()
-                                : null);
-                        chat.put("updated_at", rs.getTimestamp(22) != null
-                                ? rs.getTimestamp(22).toLocalDateTime().toString()
-                                : null);
-                        chat.put("deleted_at", rs.getTimestamp(23) != null
-                                ? rs.getTimestamp(23).toLocalDateTime().toString()
-                                : null);
-
-                        map.put(((Number) rs.getObject(4)).intValue(), chat);
-                    }
-                    return map;
-                }
-        );
+    /**
+     * Format timestamp to string matching PHP format
+     */
+    private String formatTimestamp(Timestamp timestamp) {
+        if (timestamp == null) {
+            return null;
+        }
+        LocalDateTime ldt = timestamp.toLocalDateTime();
+        return ldt.toString().replace("T", " ");
     }
 
     /**
